--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -1,9 +1,9 @@
 <div class="mobile-nav">
         <button class="mobile-nav-toggle" onclick="toggleMobileNav()">menu</button>
         <div class="mobile-nav-menu" id="mobileMenu">
-            <a href="#">home</a>
-            <a href="blog/">blog</a>
-            <a href="projects/">projects</a>
-            <a href="about/">about</a>
+            <a href="/">home</a>
+            <a href="/blog/">blog</a>
+            <a href="/projects/">projects</a>
+            <a href="/about/">about</a>
         </div>
     </div>
