feat(analytics): adds umami tracker

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="{{ '/assets/css/styles.css' | relative_url }}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="c7ac1bf4-84ba-4928-9ab5-b9641f8a2f0e"></script>
 </head>
 <body>
     {% include terminal.html %}
