style(ui): changes bullet points left aligned in mobile view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,6 +75,13 @@ body {
     text-align: center;
 }
 
+.content ul,
+.content ol {
+  text-align: left;
+  margin-left: 1.5rem;
+  padding-left: 1rem;
+}
+
 /* Headers */
 .main-title {
     font-size: 3.5rem;
