--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -188,6 +188,27 @@ body {
     transform: translateX(0);
 }
 
+@media (max-width: 600px) {
+  .links {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    column-gap: 1.5rem;
+    row-gap: 0.5rem;
+  }
+
+  .links .link:nth-child(1),
+  .links .link:nth-child(3) {
+    justify-content: flex-end;
+  }
+
+  .links .link:nth-child(2),
+  .links .link:nth-child(4) {
+    justify-content: flex-start;
+  }
+}
+
+
 /* Status Bar */
 .status {
     position: fixed;
