style(navbar): makes the navbar fixed on top when scrolled

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,4 @@
+<div class="navbar-container">
 <nav class="nav">
         <ul class="nav-links">
             <li><a href="/">home</a></li>
@@ -6,3 +7,4 @@
             <li><a href="/about/">about</a></li>
         </ul>
     </nav>
+</div>
