--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -1,3 +1,4 @@
+<div class="mobile-navbar-container">
 <div class="mobile-nav">
         <button class="mobile-nav-toggle" onclick="toggleMobileNav()">menu</button>
         <div class="mobile-nav-menu" id="mobileMenu">
@@ -6,4 +7,5 @@
             <a href="/projects/">projects</a>
             <a href="/about/">about</a>
         </div>
+    </div>
     </div>
